# infozip-utils

./: .gitignore  README.md  api.c  apihelp.c  crc_i386.S  crypt.c  crypt.h  ebcdic.h  extract.c  fileio.c  flags  funzip.c  gbloffs.c  list.c  meson.build  original_test  process.c  test.sh  ttyio.c  unshrink.c  unzip.h  unzipstb.c  unzpriv.h  unzvers.h  zipinfo.c
.github/workflows/: ci.yml
acorn/: acorn.c  riscos.c  riscos.h  swiven.h
amiga/: amiga.c  amiga.h  filedate.c  makesfx.c  stat.c  z-stat.h
aosvs/: aosvs.h
atari/: atari.c
atheos/: athcfg.h  atheos.c  atheos.h
beos/: beocfg.h  beos.c  beos.h
cmsmvs/: vmmvs.c  vmmvs.h  vmstat.h
common/: crc32.h  ttyio.c  ttyio.h
flexos/: flexos.c  flxcfg.h
human68k/: human68k.c
macos/: UnZp.h  UnZpLib.h  UnZpSFX.h  UnZpSx.h
macos/source/: charmap.h  getenv.c  helpers.c  helpers.h  macbin3.c  macbin3.h  maccfg.h  macdir.c  macdir.h  macos.c  macscreen.c  macstat.c  macstat.h  macstuff.h  mactime.c  mactime.h  macunzip.c  pathname.c  pathname.h  sxunzip.c
man/: Contents
netware/: netware.c  nlmcfg.h
qdos/: callstub.c  izqdos.h  makesfx.c  qdos.c
src/: consts.h  explode.c  extract.c  fileio.c  globals.c  inflate.c  list.c  match.c  timezone.c  ttyio.c  unix.c  unreduce.c  unxcfg.h  unzip.c  zipup.c
tandem/: tandem.c  tandem.h  tannsk.h  tanunz.c
theos/: _fprintf.c  _isatty.c  _setargv.c  _sprintf.c  _stat.c  charconv.h  oldstat.h  stat.h  theos.c  thscfg.h
tops20/: tops20.c
unix/: Makefile  unix.c
unzip/: consts.h  crc32.c  crypt.c  crypt.h  ebcdic.h  envargs.c  explode.c  extract.c  fileio.c  globals.c  globals.h  inflate.c  inflate.h  list.c  match.c  process.c  timezone.h  ttyio.c  ttyio.h  ubz2err.c  unix.c  unshrink.c  unxcfg.h  unzip.c  unzip.h  unzpriv.h  unzvers.h  zip.h  zipup.h
vms/: bzlib.h  cmdline.c  unixio_gcc.h  unixlib_gcc.h  vms.c  vms.h  vmscfg.h  vmsdefs.h
zip/: crypt.c  crypt.h  deflate.c  ebcdic.h  fileio.c  globals.c  osdep.h  revision.h  tailor.h  trees.c  ttyio.c  ttyio.h  unix.c  util.c  zip.c  zip.h  zipfile.c  zipup.c
